# the-casino-and-church-inco

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/client/src/: App.tsx  index.css
app/client/src/components/: CasinoChurchHomepage.tsx  CasinoRealm.tsx  ChurchRealm.tsx  StoryModal.tsx
app/client/src/components/casino/: CasinoSpotlightTour.tsx  GamblerGuide.tsx
app/client/src/components/church/: FaithChalice.tsx  FlipBook.tsx  PriestGuide.tsx  SpotlightTour.tsx
app/client/src/components/games/: Aviator.tsx  CoinFlip.tsx  (+5 more)
app/client/src/hooks/: useAviator.ts  useClaimRewards.ts  useCoinflip.ts  useRoulette.ts  useSlotMachine.ts
app/client/src/lib/: queryClient.ts
app/client/src/styles/: aviator.css  casino-realm.css  church-flipbook.css  church-realm.css  claim-rewards-modal.css  coinflip.css  confidential-reveal.css  homepage.css  memecoin-simulator.css  roulette.css  slot-machine.css  wallet.css
programs/casino_n_church/: Cargo.toml
programs/casino_n_church/src/: errors.rs  inco_helpers.rs  lib.rs
programs/casino_n_church/src/instructions/: admin.rs  mod.rs
programs/casino_n_church/src/instructions/casino_games/: claim_rewards.rs  mod.rs  play_aviator.rs  play_coinflip.rs  play_roulette.rs  play_slot.rs
programs/casino_n_church/src/instructions/liquidity_pool/: deposit.rs  mod.rs  withdraw.rs
programs/casino_n_church/src/states/: admin.rs  casino.rs  liquidity.rs  mod.rs
tests/: casino_n_church.ts
(+8 files in other folders)
