[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git", rev = "df610ddc3b93841ffc59a87e3da659a15910eb46" }

